// ==============================================================================================
//                      SCTCONNECT DATABASE DESIGN SPECIFICATION (STREAMLINED MVP)
// ==============================================================================================
// Hệ thống Số Tiếp nhận, Phân loại & Tổng hợp Ý kiến Dân nguyện Nhân dân cấp Xã (SCTConnect)
// Database: PostgreSQL 16+

Project SCTConnect {
  database_type: 'PostgreSQL'
  Note: 'Bản thiết kế CSDL 6 bảng tinh gọn phục vụ mục tiêu trọng tâm tiếp nhận phản ánh dân nguyện'
}

Table villages {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar(50) [unique, not null, note: 'Mã: THON_1, THON_2, THON_3, THON_4, TDP_1, TDP_2']
  name varchar(100) [not null, note: 'Tên hiển thị: Thôn 1, Thôn 2, Tổ dân phố 1...']
  is_active boolean [not null, default: true, note: 'Trạng thái hoạt động']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table organizations {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar(50) [unique, not null, note: 'Mã: FF, YOUTH_UNION, WOMEN_UNION, FARMERS_UNION, VETERANS_UNION, OTHER']
  name varchar(255) [not null, note: 'Tên Hội / Đoàn thể tiếp nhận']
  type varchar(50) [not null, default: 'union', note: 'fatherland_front (MTTQ Xã) | union (Hội thành viên) | other (Khác)']
  is_active boolean [not null, default: true, note: 'Trạng thái hoạt động']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table feedback_categories {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar(50) [unique, not null, note: 'Mã: ENVIRONMENT, SECURITY, INFRASTRUCTURE, AGRICULTURE, SOCIAL_POLICY, OTHER']
  name varchar(255) [not null, note: 'Tên lĩnh vực phản ánh dân nguyện']
  description text [note: 'Mô tả chi tiết lĩnh vực']
  is_active boolean [not null, default: true, note: 'Trạng thái hoạt động']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  phone varchar(20) [unique, not null, note: 'Số điện thoại đăng nhập']
  full_name varchar(255) [not null, note: 'Họ và tên người dùng']
  village_id uuid [ref: > villages.id, null, note: 'Thôn / TDP cư trú (Bắt buộc với Dân/Cán bộ, null với Admin IT)']
  password_hash text [not null, note: 'Mật khẩu băm Argon2id']
  user_type varchar(30) [not null, default: 'citizen', note: 'citizen (Dân/Cán bộ thường) | officer (Cán bộ phụ trách Hội/MTTQ) | admin (Quản trị kỹ thuật)']
  organization_id uuid [ref: > organizations.id, null, note: 'Gắn với Hội đoàn thể: Nếu là Hội viên hoặc Cán bộ phụ trách Hội/MTTQ']
  is_active boolean [not null, default: true, note: 'Trạng thái hoạt động của tài khoản']
  last_login_at timestamptz [note: 'Thời điểm đăng nhập gần nhất']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table feedbacks {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar(50) [unique, not null, note: 'Mã tự sinh: PA-2026-0001']
  user_id uuid [not null, ref: > users.id, note: 'Công dân gửi phản ánh']
  target_organization_id uuid [not null, ref: > organizations.id, note: 'Hội / Tổ chức tiếp nhận ghi nhận']
  incident_village_id uuid [not null, ref: > villages.id, note: 'Thôn nơi xảy ra sự việc']
  category_id uuid [not null, ref: > feedback_categories.id, note: 'Lĩnh vực phản ánh']
  address text [note: 'Địa chỉ chi tiết nơi xảy ra sự việc (ngõ, xóm, cổng chợ...)']
  title varchar(255) [not null, note: 'Tiêu đề ngắn gọn']
  content text [not null, note: 'Nội dung mô tả chi tiết hiện trường']
  status varchar(30) [not null, default: 'pending', note: 'pending (Chờ tiếp nhận) | received (Đã tiếp nhận ghi nhận) | rejected (Từ chối)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table feedback_attachments {
  id uuid [pk, default: `uuid_generate_v4()`]
  feedback_id uuid [not null, ref: > feedbacks.id, note: 'Thuộc phản ánh nào']
  file_url text [not null, note: 'Link ảnh/video hiện trường']
  file_type varchar(50) [not null, default: 'image/jpeg', note: 'image | video']
  created_at timestamptz [not null, default: `now()`]
}
